version/0.39/_sources/api/solver/_autosummary/settings/dsmc.rst.txt
:orphan:

.. _dsmc:

dsmc
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.dsmc
    :show-inheritance:

.. rubric:: Attributes

====================================================================================   ================================================================================

Attribute                                                                                                                                                       Summary

====================================================================================   ================================================================================
:ref:`enabled <enabled_25>`                                                                                                                          Enable dsmc model.

:ref:`time_step <time_step>`                                                                                                                            Dsmc time step.

:ref:`sampling_begin_iteration <sampling_begin_iteration>`                                                                               Dsmc sampling begin iteration.

:ref:`real_to_simulated_particle_ratio <real_to_simulated_particle_ratio>`                                                       Dsmc real-to-simulated particle ratio.

:ref:`collision_scheme <collision_scheme>`                                                                                                       Collision scheme type.

:ref:`collision_pair_selection <collision_pair_selection>`                                                                               Collision pair selection type.

:ref:`target_number_of_particle_per_subcell <target_number_of_particle_per_subcell>`       Target number of particle per subcell for transient adaptive subcell method.

====================================================================================   ================================================================================

.. rubric:: Included in:

======================   =================================================================================================

Parent                                                                                                             Summary

======================   =================================================================================================
:ref:`models <models>`       Enables and configures physical models such as turbulence, energy, multiphase, and radiation.

======================   =================================================================================================

